# my-sample-cpp-project

./: CMakeLists.txt
src/: main.cpp  mylib.cpp
tests/: CMakeLists.txt  test_mylib.cpp
